# tastebuds

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  VISION.md  poke-kitchen-recipe.md  poke-recipe-brief.txt  pyproject.toml  railway.json  render.yaml
migrations/: 002_taste_affinity.sql  003_places_uniqueness.sql
scripts/: seed.py
src/tastebud/: server.py
src/tastebud/db/: client.py  queries.py
src/tastebuds/: config.py  main.py  normalizer.py  server.py
src/tastebuds/db/: client.py  migrate.py  models.py  queries.py
src/tastebuds/tools/: _validation.py  feedback.py  search.py  trending.py
tests/: conftest.py  test_integration.py  test_migrate.py  test_normalizer.py  test_sentiment.py  test_smoke.py
