[project]
name = "tastebuds"
version = "0.1.0"
description = "Crowd-sourced food recommendations MCP server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires database connection"]

[tool.hatch.build.targets.wheel]
packages = ["src/tastebuds"]
